5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1715_3065.log
== TEST (2019-05-02 16:17:46) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if()
-- ERROR:
File "XXXX", line 5
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:02) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

print(tipataq)
-- OUTPUT:
CAUDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:13) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:30) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:31:03) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
elif(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- EXECUTION TIME:
0.147781
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3065/main.py", line 15, in <module>
    print(dano)
NameError: name 'dano' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:05) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
elif(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(dano)
NameError: name 'dano' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:53) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
elif(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(dano)
NameError: name 'dano' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:38) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
elif(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- ERROR:
File "XXXX", line 9
    elif(tipataq == "CAUDA"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:47) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:35:07) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- EXECUTION TIME:
0.130817
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
Entrada invalida
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
Entrada invalida
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:30) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:20) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:36:34) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- EXECUTION TIME:
0.164921
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:39) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:02) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:16) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:46) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- EXECUTION TIME:
0.163516
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:48) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- EXECUTION TIME:
0.223179
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
12
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:49) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- EXECUTION TIME:
0.201402
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
12
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:49) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- EXECUTION TIME:
0.216124
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
25
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:49) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- EXECUTION TIME:
0.273907
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
12
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:38:03) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

	print(dano)
	
-- EXECUTION TIME:
0.14652
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:

-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:38:05) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado < 1 and valdado >4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

	print(dano)
	
-- EXECUTION TIME:
0.163506
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:

-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:38) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:52) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:03) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos

print(dano)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:17) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:41:35) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) and (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- EXECUTION TIME:
0.156268
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:42) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:46) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:41:57) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- EXECUTION TIME:
0.215434
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
Entrada invalida
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
Entrada invalida
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:19) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou: (CAUDA|CUSPE|PATADA):").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:01) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:22) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:11) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:47) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos
		print(dano)
	
-- ERROR:
File "XXXX", line 17
    print(dano)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:32) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA"):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE"):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA"):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:29) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA" and (valdado >= 1 and valdado <= 4) ):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE" and (valdado >= 1 and valdado <= 4)):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA" and (valdado >= 1 and valdado <= 4)):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:43) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA" and (valdado >= 1 and valdado <= 4) ):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE" and (valdado >= 1 and valdado <= 4)):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA" and (valdado >= 1 and valdado <= 4)):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:49:51) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA" and (valdado >= 1 and valdado <= 4) ):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE" and (valdado >= 1 and valdado <= 4)):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA" and (valdado >= 1 and valdado <= 4)):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- EXECUTION TIME:
0.29418
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
Entrada invalida
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
Entrada invalida
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:12:30) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA" and (valdado >= 1 and valdado <= 4) ):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE" and (valdado >= 1 and valdado <= 4)):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA" and (valdado >= 1 and valdado <= 4)):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:12:41) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA" and (valdado >= 1 and valdado <= 4) ):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE" and (valdado >= 1 and valdado <= 4)):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA" and (valdado >= 1 and valdado <= 4)):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:12:46) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA" and (valdado >= 1 and valdado <= 4) ):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE" and (valdado >= 1 and valdado <= 4)):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA" and (valdado >= 1 and valdado <= 4)):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:13:17) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA" and (valdado >= 1 and valdado <= 4) ):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE" and (valdado >= 1 and valdado <= 4)):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA" and (valdado >= 1 and valdado <= 4)):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:13:22) 
-- CODE:
tipataq = input("tipo de ataque que o cornugon utilizou:").upper()
valdado = int(input("numero sorteado pelo dado de 4 faces:"))
numturnos = int(input("numero de turnos ate receber magia de cura:"))

if(tipataq != "CAUDA" or tipataq != "CUSPE" or tipataq != "PATADA" ) or (valdado != 1 and valdado != 2 and valdado != 3 and valdado != 4):
	print("Entrada invalida")
	
dano = 0
if(tipataq == "CAUDA" and (valdado >= 1 and valdado <= 4) ):
	dano = valdado * numturnos
	print(dano)
elif(tipataq == "CUSPE" and (valdado >= 1 and valdado <= 4)):
	dano = (2 * valdado) * numturnos
	print(dano)
elif(tipataq == "PATADA" and (valdado >= 1 and valdado <= 4)):
	dano = ((2 * valdado) - 5) * numturnos
	print(dano)
	
-- OUTPUT:
Entrada invalida
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
